# core

./: README.md  SECURITY.md  guardian-agent.md
.github/workflows/: ci.yml  release.yml
bindings/node/: Cargo.toml  README.md  package-lock.json  package.json
bindings/node/__test__/: index.spec.mjs
bindings/node/npm/darwin-arm64/: package.json
bindings/node/npm/darwin-x64/: package.json
bindings/node/npm/linux-arm64-gnu/: package.json
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/python/ows/: __init__.py
bindings/python/src/: lib.rs
docs/: 01-storage-format.md  02-signing-interface.md  03-policy-engine.md  04-agent-access-layer.md  05-key-isolation.md  06-wallet-lifecycle.md  07-supported-chains.md  quickstart.md  sdk-cli.md  sdk-node.md  sdk-python.md
lws/: README.md  install.sh  skill.md
lws/crates/lws-cli/: Cargo.toml  build.rs
lws/crates/lws-signer/: Cargo.toml
ows/crates/ows-cli/: Cargo.toml  README.md
ows/crates/ows-core/: Cargo.toml  README.md
ows/crates/ows-lib/: Cargo.toml
ows/crates/ows-pay/: Cargo.toml
ows/crates/ows-signer/: Cargo.toml
readme/partials/: architecture.md  supported-chains.md  why-ows.md
readme/templates/: node.md  ows.md  python.md
scripts/: build-llms-full.sh  set-version.sh
skills/ows/: SKILL.md
skills/ows/references/: node.md  python.md
website/: index.html
website-docs/: doc.html  index.html  vercel.json
website-docs/js/: docs.js
website-docs/md/: 01-storage-format.md  02-signing-interface.md  policy-engine-implementation.md  sdk-cli.md
website/css/: style.css
(+38 files in other folders)
